【标题】: 更新dockerfile中的JVM虚拟机启动参数
【提交类型】: feat
【影响范围】: all